// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render <ButtonGroupField> inside a Form 1`] = `
<DocumentFragment>
  <form
    id="buttonGroupForm.form"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
    >
      <div
        class="MuiBox-root MuiBox-root-1"
      >
        <div
          class="MuiButtonGroup-root"
          role="group"
          value=""
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButtonGroup-grouped MuiButtonGroup-groupedHorizontal MuiButtonGroup-groupedOutlined MuiButtonGroup-groupedOutlinedHorizontal MuiButtonGroup-groupedOutlined"
            id="buttonGroupForm.form.abc[0]"
            tabindex="0"
            type="button"
            value="1"
          >
            <span
              class="MuiButton-label"
            >
              <div
                class="MuiBox-root MuiBox-root-2"
                style="color: red;"
              >
                Red
              </div>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButtonGroup-grouped MuiButtonGroup-groupedHorizontal MuiButtonGroup-groupedOutlined MuiButtonGroup-groupedOutlinedHorizontal MuiButtonGroup-groupedOutlined"
            id="buttonGroupForm.form.abc[1]"
            tabindex="0"
            type="button"
            value="2"
          >
            <span
              class="MuiButton-label"
            >
              <div
                class="MuiBox-root MuiBox-root-3"
                style="color: green;"
              >
                Green
              </div>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButtonGroup-grouped MuiButtonGroup-groupedHorizontal MuiButtonGroup-groupedOutlined MuiButtonGroup-groupedOutlinedHorizontal MuiButtonGroup-groupedOutlined"
            id="buttonGroupForm.form.abc[2]"
            tabindex="0"
            type="button"
            value="3"
          >
            <span
              class="MuiButton-label"
            >
              <div
                class="MuiBox-root MuiBox-root-4"
                style="color: blue;"
              >
                Blue
              </div>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`should render <ButtonGroupField> inside a FormView 1`] = `
<DocumentFragment>
  <form
    id="buttonGroupFormView.form"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation3 MuiPaper-rounded"
    >
      <div
        class="MuiBox-root MuiBox-root-5"
      >
        <div
          class="MuiBox-root MuiBox-root-6"
        >
          <div
            class="MuiGrid-root MuiGrid-container"
          >
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              <div
                class="MuiBox-root MuiBox-root-7"
              >
                <div
                  class="MuiButtonGroup-root"
                  role="group"
                  value=""
                >
                  <button
                    class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButtonGroup-grouped MuiButtonGroup-groupedHorizontal MuiButtonGroup-groupedOutlined MuiButtonGroup-groupedOutlinedHorizontal MuiButtonGroup-groupedOutlined"
                    id="buttonGroupFormView.form.abc[0]"
                    tabindex="0"
                    type="button"
                    value="1"
                  >
                    <span
                      class="MuiButton-label"
                    >
                      <div
                        class="MuiBox-root MuiBox-root-8"
                        style="color: red;"
                      >
                        Red
                      </div>
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </button>
                  <button
                    class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButtonGroup-grouped MuiButtonGroup-groupedHorizontal MuiButtonGroup-groupedOutlined MuiButtonGroup-groupedOutlinedHorizontal MuiButtonGroup-groupedOutlined"
                    id="buttonGroupFormView.form.abc[1]"
                    tabindex="0"
                    type="button"
                    value="2"
                  >
                    <span
                      class="MuiButton-label"
                    >
                      <div
                        class="MuiBox-root MuiBox-root-9"
                        style="color: green;"
                      >
                        Green
                      </div>
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </button>
                  <button
                    class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButtonGroup-grouped MuiButtonGroup-groupedHorizontal MuiButtonGroup-groupedOutlined MuiButtonGroup-groupedOutlinedHorizontal MuiButtonGroup-groupedOutlined"
                    id="buttonGroupFormView.form.abc[2]"
                    tabindex="0"
                    type="button"
                    value="3"
                  >
                    <span
                      class="MuiButton-label"
                    >
                      <div
                        class="MuiBox-root MuiBox-root-10"
                        style="color: blue;"
                      >
                        Blue
                      </div>
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>
</DocumentFragment>
`;
